--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-	<title>HELLO COURSERA!</title>
+<link rel="stylesheet" href="style.css">
+<meta charset="utf-8">
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<title>Module 2 solution</title>
 </head>
 <body>
-<h1>Hello coursera!Its an amazing course!</h1>
+<h1>OUR MENU</h1>
+<div class='row'>
+	<div class='col-lg-4 col-md-6 sx-12'>
+		<div class='section'>
+			<span id='pp1'>PIZZAS</span>
+				<p>What’s better than having a crispy melty pizza, you ask?
+
+Having that crispy and melty pizza in the comfort of your own home with the ones you love, we say.No matter what the situation, pizza always helps. Especially a pizza that gives you the freedom to choose your toppings - from paneer, crisp capsicum, onion, jalapeno, paneer tikka and extra cheese to non-veg toppings such as pepper barbeque chicken, peri-peri chicken, the options are almost endless! 
+</p>
+		</div>
+	</div>
+	<div class='col-lg-4 col-md-6 sx-12'>
+		<div class='section'>
+			<span id='pp2'>BURGERS</span>
+				<p>Great Food Comes First!The original burgers, our commitment to premium ingredients, signature recipes, and family-friendly dining experiences is what has defined our brand for more than 5 successful years.We serve you the most lipsmacking burgers like hamburger,cheeseburger,aloo-tikki burger ,spicy chicken burger and lots more!Free french fries every friday with your favourite meal! you can combine your meal with  any drink of your choice ranging from softdrinks to coffee!
+</p>
+		</div>
+	</div>
+	<div class='col-lg-4 col-md-12 sx-12'>
+		<div class='section'>
+			<span id='pp3'>MILKSHAKES</span>
+				<p>Our Frappés are cool, sweet treats blended with ice and covered with whipped topping, available in Caramel or Mocha.Try our rich, creamy Caramel or Mocha McCafé® Frappés, blended with ice and covered in whipped topping.you can also try our rich thick milkshakes blended with pure full fat milk,ice-creams,syrups like chocolate,caramel,strawberry,loaded with fresh cream and toppings of your choice rangin from sprinkles to kitkats to brownies,you name it,we have it!
+
+
+</p>
+		</div>
+	</div>
+</div>
 </body>
 </html>
+
